@@ -28,6 +28,8 @@ isValid(raster()) failed. Reported by dww on http://stackoverflow.com/questions/
 zapply passes on ... arguments to stackApply
 res() for rotated rasters was wrong https://gis.stackexchange.com/questions/259321/opening-rotated-raster-in-r (fix suggested by Spacedman)
 cover with RasterStackBrick objects could not write to file (reported by L. Wasser https://stackoverflow.com/questions/44295842/r-raster-cover-function-error-with-landsat-stacks 
+Raster Attribute Tables with labels with a colon it could not be written because the colon was used as delimiter in the grd file.
+https://stackoverflow.com/questions/46832976/why-is-crop-sometimes-introducing-nas-on-a-categorical-raster
 
 --- 31-May-2016, version: 2.5-8
 new functions for Raster objects: as.integer, as.list
